[package]
description = "A pool-workers library, in Rust"
documentation = "https://docs.rs/piscine/latest/piscine/"
name = "piscine"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/mlemesle/piscine"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
